--- a/includes/style.css
+++ b/includes/style.css
@@ -14,15 +14,99 @@ header, nav, main, footer, aside, section, article,p{
 body{
   font-family: 'Alef', sans-serif;
 }
-
-header{
+body #device_background{
+	background: #D3D3D3;
+}
+#clear{
+	clear: both;
+}
+.display_none{display: none;}
+#wrapper_index header,#wrapper_login header{
   height:258px;
   width: 100%;
-
 }
-#wrapper_index,#wrapper_login{
+#wrapper_home header{
+width: 100%;
+height:118px;
+background: #eeeeee;
+border-bottom: #cccccc 1px solid;
+text-align: center;
+}
+#wrapper_home header section{
+	position: absolute;
+	top:10px;
+	right: 80px;
+	font-size: 14px;
+}
+#wrapper_home header section img{
+	display: block;
+}
+#wrapper_home header nav ul{
+	position: absolute;
+	top: 0;
+	left: 220px;
+	box-shadow: 4px 0px 7px 4px #777777;
+}
+ul li{
+	list-style-type: none;
+}
+#wrapper_home header nav ul li{
+	float: left;
+	height: 140px;
+	width: 170px;
+	border-right: #F0F0F0 1px solid;
+	font-size: 14px;
+	text-align: center;
+	background: #5bc0de;
+}
+#wrapper_home header nav ul li:nth-child(5){
+	border: 0;
+}
+
+#wrapper_home header nav ul li a{
+	width:170px;
+	height: 140px;
+	display:block;
+	margin: 0 auto;
+	background: url('../images/view_user_details_black.png') no-repeat 55px 15px;
+}
+#wrapper_home header nav ul li:nth-child(2) a{
+	background-image: url('../images/waiting_list_black.png') ,url('../images/notification_anat.png');
+	background-position: 55px 15px,64px 10px;
+}
+#wrapper_home header nav ul li:nth-child(3) a{
+	background-image: url('../images/book_status_black.png');
+}
+#wrapper_home header nav ul li:nth-child(4) a{
+	background-image: url('../images/manage_books_black.png')
+}
+#wrapper_home header nav ul li:nth-child(5) a{
+	background-image: url('../images/settings_2_black.png')
+}
+#wrapper_home header nav ul li a span{
+	position:relative;
+	top:80px;
+	color:#000000;
+}
+#wrapper_home header nav ul li a:hover{
+background-color: #2f96b4;
+}
+#wrapper_index,#wrapper_login,#wrapper_home{
   margin: 0 auto;
 }
+#wrapper_home{
+	width: 1200px;
+}
+
+#wrapper_home header #logo{
+	width:118px;
+  height: 118px;
+	display:block;
+  margin: 0 auto;
+	margin-left: 40px;
+	background: url('../images/Logo.png') no-repeat center;
+}
+
 #wrapper_index section header #logo,#wrapper_login section header #logo{
   width:258px;
   height: 258px;
@@ -48,7 +132,7 @@ header{
 #wrapper_index section{
 text-align: center;
 }
-#wrapper_index section main a,#wrapper_login section main form button{
+#wrapper_index section main a,#wrapper_login section main form #login_btn{
   display:block;
   background:#62c462;
   opacity:0.73;
@@ -60,12 +144,12 @@ text-align: center;
   color:#ffffff;
   font-family: 'Alef', sans-serif;
 }
-#wrapper_login section main form button{
+#wrapper_login section main form #login_btn{
 padding: 10px;
 width: 245px;
 margin-top:52px;
 }
-#wrapper_index section main a:hover,#wrapper_login section main form button:hover{
+#wrapper_index section main a:hover,#wrapper_login section main form #login_btn:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 #wrapper_login section form article input{
@@ -92,13 +176,314 @@ margin-top:52px;
 #bad_login{
   color:#ee5f5b;
   font-size: 15px;
-  display:none;
 }
-@media (max-width: 600px) {
+#wrapper_home main{
+	height: 500px;
+	background: #ffffff;
+	padding-top: 40px;
+	padding-left: 60px;
+
+}
+#wrapper_home footer{
+	height: 155px;
+	background: #eeeeee;
+	border-top: #cccccc 1px solid;
+}
+#wrapper_home footer h3{
+	padding-top: 50px;
+	font-family: 'Allerta', sans-serif;
+	font-size: 25px;
+	padding-left: 60px;
+
+}
+#wrapper_home footer span{
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+	font-size: 14px;
+}
+main ul.breadcrumb {
+    padding-right: 16px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+    list-style: none;
+}
+main ul.breadcrumb li {
+    display: inline;
+    font-size: 14px;
+}
+main ul.breadcrumb li:after {
+    padding: 8px;
+    color: black;
+    content: "\003e";
+}
+ul.breadcrumb li a {
+    color: #000000;
+    text-decoration: none;
+}
+ul.breadcrumb li a:hover {
+	font-weight: bold;
+	font-size: 16px;
+}
+#wrapper_home main #main_desktop>section{
+	display: inline-block;
+	vertical-align:top;
+	background: #f0f9fc;
+	border-radius: 5px 5px 0px 0px;
+}
+#wrapper_home main #main_desktop>section h2{
+	background: #777777;
+	border-radius: 5px 5px 0px 0px;
+	color:#ffffff;
+	font-size: 24px;
+	font-weight: normal;
+	padding-top: 15px;
+	padding-left: 15px;
+	height: 45px;
+
+}
+#wrapper_home main #main_desktop>section:nth-child(2){
+	margin-right: 85px;
+	height: 368px;
+	width: 375px;
+}
+#wrapper_home main #main_desktop>section:nth-child(2) ul{
+	padding-left: 15px;
+	padding-top: 20px;
+	font-size: 18px;
+	font-weight: bold;
+}
+#wrapper_home main #main_desktop>section:nth-child(2) ul li span{
+	font-weight:normal;
+}
+#wrapper_home main #main_desktop>section:nth-child(2) ul li a{
+	display: inline-block;
+	background: #0088cc;
+	opacity: 0.7;
+	border-radius: 25px;
+	font-size: 12px;
+	height: 20px;
+	width: 90px;
+	text-align: center;
+	padding: 6px;
+}
+#wrapper_home main #main_desktop>section:nth-child(2) ul li:nth-child(5){
+	display: block;
+	text-align: center;
+}
+
+#wrapper_home main #main_desktop>section:nth-child(2) ul li{
+	display: inline-block;
+	margin-bottom: 13px;
+	padding-top: 13px;
+	border-top: #eeeeee 1px solid;
+}
+#wrapper_home main #main_desktop section:nth-child(3){
+	height: 368px;
+	width: 609px;
+}
+#wrapper_home main #main_desktop>section:nth-child(3) img{
+	display: block;
+	padding-left: 15px;
+}
+#wrapper_home main #main_desktop section:nth-child(3) a{
+	display: block;
+	margin: 0 auto;
+	color: #62c462;
+	border: #62c462 solid 1px;
+	font-size: 16px;
+	text-align: center;
+	height: 22px;
+	width: 110px;
+	background: #ffffff;
+	margin-top: 50px;
+}
+#main_mobile{display: none;}
+
+
+/* ////////////////////////////////////////// */
+
+@media (max-width: 900px) {
+
+body{
+		overflow-x: hidden;
+		position: relative;
+		left: 0;
+}
+.push-toright-nav{
+	position:fixed;
+	left: 0;
+	top:0;
+}
+.push-toright {
+	left: 154px;
+}
+
+.push-toleft {
+	left: -154px;
+}
 #wrapper_index section, #wrapper_login section {
   border-radius: 0;
-  margin:0;
+  margin:0 ;
   width: 100%;
   height: 700px;
   box-shadow:0;
+}
+#wrapper_login section main form article{
+  padding-left: 16px;
+}
+#wrapper_home header{
+	height: 90px;
+}
+#wrapper_home {
+	width: 360px;
+}
+#wrapper_home header #logo{
+	width:100px;
+  height: 100px;
+	display:block;
+	position: absolute;
+	top:-5px;
+	right: 122px;
+	background: url('../images/Logo_small.png') no-repeat center;
+}
+#main_mobile h2{
+	font-size: 24px;
+	padding-left: 20px;
+}
+#wrapper_home #main_mobile .section_mobile{
+	text-align: center;
+	background: #2f96b4;
+	color:#ffffff;
+	font-size: 24px;
+	height: 45px;
+	width: 100%;
+	margin-bottom: 20px;
+}
+#main_mobile .section_mobile>img{
+	display: inline-block;
+	position: relative;
+	top: 5px;
+}
+#main_mobile .book_list a{
+	color:#000000;
+}
+#main_mobile .book_list h3{
+	font-weight: 700;
+}
+#main_mobile .book_list article{
+	display: inline-block;
+	vertical-align:top;
+	width: 140px;
+	height: 260px;
+	text-align: center;
+	margin-left: 25px;
+	padding-bottom: 7px;
+}
+
+#wrapper_home footer{
+	display: none;
+}
+#wrapper_home main{
+	padding-top: 10px;
+	padding-left: 0;
+}
+#main_desktop{display: none;}
+#main_mobile{display:block;}
+
+#wrapper_home header section{
+	top:5px;
+	left: 274px;
+}
+#wrapper_home header section span{display: none;}
+#nav_bar>section img{
+text-align: left;}
+#nav_bar{
+	position: relative;
+	right: 5px;
+	top: 30px;
+	width: 150px;
+	z-index: 1000;
+}
+#wrapper_home header nav ul{
+	position: absolute;
+	top: 0;
+	left: 0;
+	box-shadow: 4px 0px 7px 4px #777777;
+}
+#nav_bar h1{
+	display: inline-block;
+	margin-left: 10px;
+	font-size: 26px;
+}
+#wrapper_home header nav ul li{
+	border-right: 0;
+	border-bottom: #F0F0F0 1px solid;
+	height: 100px;
+}
+#wrapper_home header nav ul li:nth-child(1){
+	padding-top: 20px;
+	background: #2f96b4;
+	height: 100px;
+	border: 0;
+}
+#wrapper_home header nav ul li a{
+	height: 100px;
+}
+#wrapper_home header nav ul li:nth-child(2) a{
+	background: url('../images/settings_2_black.png') no-repeat 55px 15px;
+}
+#wrapper_home header nav ul li:nth-child(3) a{
+	background-image: url('../images/book_plus_black.png') ;
+}
+#wrapper_home header nav ul li:nth-child(4) a{
+	background-image: url('../images/book_minus_black.png');
+}
+#wrapper_home header nav ul li:nth-child(5) a{
+	background-image: url('../images/waiting_list_black.png')
+}
+#wrapper_home header nav ul li:nth-child(5){
+	border-bottom: #F0F0F0 1px solid;
+}
+#wrapper_home header nav ul li:nth-child(6) a{
+	background-image: url('../images/book_history.png')
+}
+#wrapper_home header nav ul li:nth-child(6){
+	border: 0;
+}
+#borrow_page form{
+	background-color: #777777;
+	padding-left:10px;
+	padding-top:30px;
+	padding-bottom: 30px;
+	margin-bottom: 10px;
+}
+#borrow_page input{
+display: block;
+font-size: 18px;
+width: 270px;
+height: 26px;
+font-family: 'Alef', sans-serif;
+margin-bottom: 10px;
+border:0;
+border-radius: 7px;
+padding:5px;
+}
+#borrow_page input:nth-child(3){
+	margin:0;
+
+}
+#borrow_page input:last-child{
+position:absolute;
+right:4px;
+top:162px;
+height: 50px;
+width: 50px;
+margin:0;
+border:0;
+background: url("../images/i_search.png") no-repeat center;
+}
+#wrapper_home #borrow_page{
+	padding-top:0px;
+}
 }
